[gd_scene load_steps=3 format=3 uid="uid://room_type_button"]

[ext_resource type="Script" path="res://scripts/designer/RoomTypeButton.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tooltip"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.290196, 0.290196, 0.290196, 1)

[node name="RoomTypeButton" type="Button"]
custom_minimum_size = Vector2(240, 50)
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "BRIDGE"
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "2 BP"
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "x0"
vertical_alignment = 1

[node name="TooltipTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TooltipPanel" type="Panel" parent="."]
visible = false
z_index = 100
custom_minimum_size = Vector2(250, 0)
offset_left = -260.0
offset_top = 0.0
offset_right = -10.0
offset_bottom = 100.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tooltip")

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Content" type="VBoxContainer" parent="TooltipPanel/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RoomNameLabel" type="Label" parent="TooltipPanel/VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.886275, 0.886275, 1)
theme_override_font_sizes/font_size = 20
text = "BRIDGE"

[node name="DescriptionLabel" type="Label" parent="TooltipPanel/VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Command center. Required. Self-powered."
autowrap_mode = 3

[node name="StatsLabel" type="Label" parent="TooltipPanel/VBoxContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 14
text = "Losing Bridge = instant defeat."
autowrap_mode = 3
